--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "preview": "vite preview",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest"
